apps/cv/base/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv
  labels:
    name: cv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-headers: "xforwarded"
spec:
  tls:
    - hosts:
        - jakubkubacki.com
      secretName: cv-tls
  rules:
    - host: jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cv
                port:
                  number: 3000
